--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -48,14 +48,61 @@
     				android:id="@+id/layout_ad"
     				android:layout_height="wrap_content" />
 			</RelativeLayout>
-            <LinearLayout android:id="@+id/tab2"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" >
-                <TextView android:id="@+id/textView2"
-                    android:text="Contenido Tab 2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+            
+          	<LinearLayout
+				android:id="@+id/tab2"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:orientation="vertical"
+				xmlns:android="http://schemas.android.com/apk/res/android">
+				<TextView
+					android:id="@+id/widget33"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Rain Ratio" />
+				<EditText
+					android:id="@+id/widget32"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/widget37"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Rain duration" />
+				<EditText
+					android:id="@+id/widget38"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+        	</LinearLayout>
+        	
+          	<LinearLayout
+				android:id="@+id/tab3"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:orientation="vertical"
+				xmlns:android="http://schemas.android.com/apk/res/android">
+				<TextView
+					android:id="@+id/widget333"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Grow Ratio" />
+				<EditText
+					android:id="@+id/widget323"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/widget373"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Grow duration" />
+				<EditText
+					android:id="@+id/widget383"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
         	</LinearLayout>
  
          </FrameLayout>
