--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -30,16 +30,11 @@
     				android:layout_width="fill_parent"
     				android:layout_height="wrap_content"
     				android:layout_below="@+id/pantallasimulacio">
-    				<Button
-						android:id="@+id/start"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/start" />
-					<Button
-						android:id="@+id/stop"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="@string/stop" />
+    				<TextView
+					android:id="@+id/show"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="% of plants:" />
 				</LinearLayout>
 				<LinearLayout
     				android:layout_below="@+id/pantallasimulacio"
@@ -56,24 +51,40 @@
 				android:orientation="vertical"
 				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
-					android:id="@+id/widget33"
+					android:id="@+id/rain_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
-					android:text="Rain Ratio" />
+					android:text="Rain Grow Ratio" />
 				<EditText
-					android:id="@+id/widget32"
+					android:id="@+id/rain_edit1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/widget37"
+					android:id="@+id/rain_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
-					android:text="Rain duration" />
+					android:text="Rain Duration" />
 				<EditText
-					android:id="@+id/widget38"
+					android:id="@+id/rain_edit2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/rain_txt3"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Rain Chances" />
+				<EditText
+					android:id="@+id/rain_edit3"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<Button
+					android:id="@+id/rain_update"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Update" 
 					/>
         	</LinearLayout>
         	
@@ -84,24 +95,30 @@
 				android:orientation="vertical"
 				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
-					android:id="@+id/widget333"
+					android:id="@+id/grow_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:text="Grow Ratio" />
 				<EditText
-					android:id="@+id/widget323"
+					android:id="@+id/grow_edit1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/widget373"
+					android:id="@+id/grow_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
-					android:text="Grow duration" />
+					android:text="Near Grow Ratio" />
 				<EditText
-					android:id="@+id/widget383"
+					android:id="@+id/grow_edit1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					/>
+				<Button
+					android:id="@+id/grow_update"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Update" 
 					/>
         	</LinearLayout>
  
