--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -24,6 +24,7 @@
             	<LinearLayout
     				android:id="@+id/pantallasimulacio"
     				android:layout_width="fill_parent"
+    				android:layout_marginTop="30dip"
     				android:layout_height="350dp" />
 				<LinearLayout
     				android:id="@+id/LinearLayout02"
@@ -34,6 +35,7 @@
 					android:id="@+id/show"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:gravity="center"
 					android:text="% of plants:" />
 				</LinearLayout>
 				<LinearLayout
