--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -25,18 +25,19 @@
     				android:id="@+id/pantallasimulacio"
     				android:layout_width="fill_parent"
     				android:layout_marginTop="30dip"
-    				android:layout_height="350dp" />
+    				android:layout_height="300dp" />
 				<LinearLayout
     				android:id="@+id/LinearLayout02"
     				android:layout_width="fill_parent"
     				android:layout_height="wrap_content"
     				android:layout_below="@+id/pantallasimulacio">
     				<TextView
-					android:id="@+id/show"
+					android:id="@+id/show_plants"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:gravity="center"
-					android:text="% of plants:" />
+					android:text="" />
+    				
 				</LinearLayout>
 				<LinearLayout
     				android:layout_below="@+id/pantallasimulacio"
@@ -82,20 +83,6 @@
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
-				<Button
-					android:id="@+id/rain_update"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="Update" 
-					/>
-        	</LinearLayout>
-        	
-          	<LinearLayout
-				android:id="@+id/tab3"
-				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
-				android:orientation="vertical"
-				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
 					android:id="@+id/grow_txt1"
 					android:layout_width="fill_parent"
@@ -117,7 +104,94 @@
 					android:layout_height="wrap_content"
 					/>
 				<Button
-					android:id="@+id/grow_update"
+					android:id="@+id/plants_update"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Update" 
+					/>
+        	</LinearLayout>
+        	
+          	<LinearLayout
+				android:id="@+id/tab3"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:orientation="vertical"
+				xmlns:android="http://schemas.android.com/apk/res/android">
+				<TextView
+					android:id="@+id/race1_txt1"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Grow Ratio" />
+				<EditText
+					android:id="@+id/race1_edit1"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/race1_txt2"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Eficiency" />
+				<EditText
+					android:id="@+id/race1_edit2"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/race1_txt3"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Max Age" />
+				<EditText
+					android:id="@+id/race1_edit3"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<Button
+					android:id="@+id/race1_update"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="Update" 
+					/>
+        	</LinearLayout>
+        	<LinearLayout
+				android:id="@+id/tab4"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:orientation="vertical"
+				xmlns:android="http://schemas.android.com/apk/res/android">
+				<TextView
+					android:id="@+id/race2_txt1"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Grow Ratio" />
+				<EditText
+					android:id="@+id/race2_edit1"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/race2_txt2"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Eficiency" />
+				<EditText
+					android:id="@+id/race2_edit2"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/race2_txt3"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Max Age" />
+				<EditText
+					android:id="@+id/race2_edit3"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<Button
+					android:id="@+id/race2_update"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="Update" 
