--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -147,6 +147,26 @@
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
+				<TextView
+					android:id="@+id/race1_txt4"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="X coord seed" />
+				<EditText
+					android:id="@+id/race1_edit4"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/race1_txt5"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Y coord seed" />
+				<EditText
+					android:id="@+id/race1_edit5"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
 				<Button
 					android:id="@+id/race1_update"
 					android:layout_width="wrap_content"
@@ -187,6 +207,26 @@
 					android:text="Max age" />
 				<EditText
 					android:id="@+id/race2_edit3"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/race2_txt4"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="X coord seed" />
+				<EditText
+					android:id="@+id/race2_edit4"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/race2_txt5"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:text="Y coord seed" />
+				<EditText
+					android:id="@+id/race2_edit5"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
