--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -20,6 +20,7 @@
     			android:id="@+id/tab1"
     			android:layout_width="fill_parent"
     			android:layout_height="fill_parent"
+    			android:background="@drawable/splashscreen"
     			android:orientation="vertical" >
             	<LinearLayout
     				android:id="@+id/pantallasimulacio"
@@ -30,12 +31,12 @@
     				android:id="@+id/LinearLayout02"
     				android:layout_width="fill_parent"
     				android:layout_height="wrap_content"
-    				android:background="@drawable/splashscreen"
     				android:layout_below="@+id/pantallasimulacio">
     				<TextView
 					android:id="@+id/show_info"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:gravity="center"
 					android:text="" />
     				
@@ -59,6 +60,7 @@
 					android:id="@+id/rain_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="OnRain plants grow ratio" />
 				<EditText
 					android:id="@+id/rain_edit1"
@@ -69,6 +71,7 @@
 					android:id="@+id/rain_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Rain duration" />
 				<EditText
 					android:id="@+id/rain_edit2"
@@ -79,6 +82,7 @@
 					android:id="@+id/rain_txt3"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Rain chances" />
 				<EditText
 					android:id="@+id/rain_edit3"
@@ -89,6 +93,7 @@
 					android:id="@+id/grow_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="General grow ratio" />
 				<EditText
 					android:id="@+id/grow_edit1"
@@ -99,6 +104,7 @@
 					android:id="@+id/grow_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Proximity grow ratio" />
 				<EditText
 					android:id="@+id/grow_edit2"
@@ -124,6 +130,7 @@
 					android:id="@+id/race1_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Grow ratio" />
 				<EditText
 					android:id="@+id/race1_edit1"
@@ -134,6 +141,7 @@
 					android:id="@+id/race1_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Energy used to grow" />
 				<EditText
 					android:id="@+id/race1_edit2"
@@ -144,6 +152,7 @@
 					android:id="@+id/race1_txt3"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Max age" />
 				<EditText
 					android:id="@+id/race1_edit3"
@@ -154,6 +163,7 @@
 					android:id="@+id/race1_txt4"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="X coord seed" />
 				<EditText
 					android:id="@+id/race1_edit4"
@@ -164,6 +174,7 @@
 					android:id="@+id/race1_txt5"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Y coord seed" />
 				<EditText
 					android:id="@+id/race1_edit5"
@@ -188,6 +199,7 @@
 					android:id="@+id/race2_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Grow ratio" />
 				<EditText
 					android:id="@+id/race2_edit1"
@@ -198,6 +210,7 @@
 					android:id="@+id/race2_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Energy used to grow" />
 				<EditText
 					android:id="@+id/race2_edit2"
@@ -208,6 +221,7 @@
 					android:id="@+id/race2_txt3"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Max age" />
 				<EditText
 					android:id="@+id/race2_edit3"
@@ -218,6 +232,7 @@
 					android:id="@+id/race2_txt4"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="X coord seed" />
 				<EditText
 					android:id="@+id/race2_edit4"
@@ -228,6 +243,7 @@
 					android:id="@+id/race2_txt5"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="Y coord seed" />
 				<EditText
 					android:id="@+id/race2_edit5"
@@ -252,6 +268,7 @@
 					android:id="@+id/helptext"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:textColor="#000000"
 					android:text="@string/textinfo" />
         	</LinearLayout>
  
