--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -22,7 +22,7 @@
     			android:id="@+id/tab1"
     			android:layout_width="fill_parent"
     			android:layout_height="fill_parent"
-    			android:background="@drawable/splashscreen"
+    			android:background="@drawable/background"
     			android:orientation="vertical" >
             	<LinearLayout
     				android:id="@+id/pantallasimulacio"
@@ -55,7 +55,7 @@
 				android:layout_width="fill_parent"
 				android:layout_height="fill_parent"
 				android:orientation="vertical"
-				android:background="@drawable/splashscreen"
+				android:background="@drawable/background"
 				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
 					android:id="@+id/grow_txt1"
@@ -130,70 +130,70 @@
 				android:layout_width="fill_parent"
 				android:layout_height="fill_parent"
 				android:orientation="vertical"
-				android:background="@drawable/splashscreen"
+				android:background="@drawable/background"
 				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
-					android:id="@+id/race1_txt1"
+					android:id="@+id/specie1_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt1" />
+					android:text="@string/specie_txt1" />
 				<EditText
-					android:id="@+id/race1_edit1"
-					android:hint="@string/race_txt1"
+					android:id="@+id/specie1_edit1"
+					android:hint="@string/specie_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/race1_txt2"
+					android:id="@+id/specie1_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt2" />
+					android:text="@string/specie_txt2" />
 				<EditText
-					android:id="@+id/race1_edit2"
-					android:hint="@string/race_txt2"
+					android:id="@+id/specie1_edit2"
+					android:hint="@string/specie_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/race1_txt3"
+					android:id="@+id/specie1_txt3"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt3" />
+					android:text="@string/specie_txt3" />
 				<EditText
-					android:id="@+id/race1_edit3"
-					android:hint="@string/race_txt3"
+					android:id="@+id/specie1_edit3"
+					android:hint="@string/specie_txt3"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/race1_txt4"
+					android:id="@+id/specie1_txt4"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt4" />
+					android:text="@string/specie_txt4" />
 				<EditText
-					android:id="@+id/race1_edit4"
-					android:hint="@string/race_txt4"
+					android:id="@+id/specie1_edit4"
+					android:hint="@string/specie_txt4"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/race1_txt5"
+					android:id="@+id/specie1_txt5"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt5" />
+					android:text="@string/specie_txt5" />
 				<EditText
-					android:id="@+id/race1_edit5"
-					android:hint="@string/race_txt5"
+					android:id="@+id/specie1_edit5"
+					android:hint="@string/specie_txt5"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<Button
-					android:id="@+id/race1_update"
+					android:id="@+id/specie1_update"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="@string/update" 
@@ -205,70 +205,70 @@
 				android:layout_width="fill_parent"
 				android:layout_height="fill_parent"
 				android:orientation="vertical"
-				android:background="@drawable/splashscreen"
+				android:background="@drawable/background"
 				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
-					android:id="@+id/race2_txt1"
+					android:id="@+id/specie2_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt1" />
+					android:text="@string/specie_txt1" />
 				<EditText
-					android:id="@+id/race2_edit1"
-					android:hint="@string/race_txt1"
+					android:id="@+id/specie2_edit1"
+					android:hint="@string/specie_txt1"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/race2_txt2"
+					android:id="@+id/specie2_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt2" />
+					android:text="@string/specie_txt2" />
 				<EditText
-					android:id="@+id/race2_edit2"
-					android:hint="@string/race_txt2"
+					android:id="@+id/specie2_edit2"
+					android:hint="@string/specie_txt2"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/race2_txt3"
+					android:id="@+id/specie2_txt3"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt3" />
+					android:text="@string/specie_txt3" />
 				<EditText
-					android:id="@+id/race2_edit3"
-					android:hint="@string/race_txt3"
+					android:id="@+id/specie2_edit3"
+					android:hint="@string/specie_txt3"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/race2_txt4"
+					android:id="@+id/specie2_txt4"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt4" />
+					android:text="@string/specie_txt4" />
 				<EditText
-					android:id="@+id/race2_edit4"
-					android:hint="@string/race_txt4"
+					android:id="@+id/specie2_edit4"
+					android:hint="@string/specie_txt4"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<TextView
-					android:id="@+id/race2_txt5"
+					android:id="@+id/specie2_txt5"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:textColor="#000000"
-					android:text="@string/race_txt5" />
+					android:text="@string/specie_txt5" />
 				<EditText
-					android:id="@+id/race2_edit5"
-					android:hint="@string/race_txt5"
+					android:id="@+id/specie2_edit5"
+					android:hint="@string/specie_txt5"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
 				<Button
-					android:id="@+id/race2_update"
+					android:id="@+id/specie2_update"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="@string/update" 
@@ -280,7 +280,7 @@
 				android:layout_width="fill_parent"
 				android:layout_height="fill_parent"
 				android:orientation="vertical"
-				android:background="@drawable/splashscreen"
+				android:background="@drawable/background"
 				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
 					android:id="@+id/helptext"
