--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -39,7 +39,8 @@
 						android:layout_width="fill_parent"
 						android:layout_height="wrap_content"
 						android:textColor="#000000"
-						android:gravity="center"
+						android:layout_marginLeft="10dip"
+						android:gravity="left"
 						android:text="" />		
 				</LinearLayout>
 				<LinearLayout
