--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -51,12 +51,22 @@
     				android:layout_height="wrap_content" />
 			</RelativeLayout>
             <!-- Second tab -->
-          	<LinearLayout
+            <!-- inicia el ScrollView -->
+   			<LinearLayout
 				android:id="@+id/tab2"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
-				android:orientation="vertical"
+				android:layout_height="wrap_content"
 				android:background="@drawable/background"
+				android:orientation="vertical"
+				xmlns:android="http://schemas.android.com/apk/res/android">
+        	<ScrollView 
+        	    android:layout_width="fill_parent"
+        		android:layout_height="fill_parent">
+          	<LinearLayout
+				android:id="@+id/insidetab2"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:orientation="vertical"
 				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
 					android:id="@+id/grow_txt1"
@@ -125,13 +135,26 @@
 					android:text="@string/update" 
 					/>
         	</LinearLayout>
+        	</ScrollView>
+        	</LinearLayout>
         	<!-- Third tab -->
+          	<!-- inicia el ScrollView -->
           	<LinearLayout
 				android:id="@+id/tab3"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
-				android:orientation="vertical"
+				android:layout_height="wrap_content"
 				android:background="@drawable/background"
+				android:orientation="vertical"
+				xmlns:android="http://schemas.android.com/apk/res/android">
+        	<ScrollView 
+        	    android:layout_width="fill_parent"
+        		android:layout_height="fill_parent">
+          	<LinearLayout
+				android:id="@+id/insidetab3"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:orientation="vertical"
+				
 				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
 					android:id="@+id/specie1_txt1"
@@ -200,13 +223,25 @@
 					android:text="@string/update" 
 					/>
         	</LinearLayout>
+        	</ScrollView>
+        	</LinearLayout>
         	<!-- Fourth tab -->
+        	<!-- inicia el ScrollView -->
         	<LinearLayout
 				android:id="@+id/tab4"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
-				android:orientation="vertical"
+				android:layout_height="wrap_content"
 				android:background="@drawable/background"
+				android:orientation="vertical"
+				xmlns:android="http://schemas.android.com/apk/res/android">
+        	<ScrollView 
+        	    android:layout_width="fill_parent"
+        		android:layout_height="fill_parent">
+        	<LinearLayout
+				android:id="@+id/insidetab4"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:orientation="vertical"
 				xmlns:android="http://schemas.android.com/apk/res/android">
 				<TextView
 					android:id="@+id/specie2_txt1"
@@ -275,14 +310,36 @@
 					android:text="@string/update" 
 					/>
         	</LinearLayout>
+        	</ScrollView>
+        	</LinearLayout>
         	<!-- Fifth tab -->
+        	<!-- inicia el ScrollView -->
         	<LinearLayout
 				android:id="@+id/tab5"
 				android:layout_width="fill_parent"
-				android:layout_height="fill_parent"
+				android:layout_height="wrap_content"
+				android:background="@drawable/background"
 				android:orientation="vertical"
-				android:background="@drawable/help"
 				xmlns:android="http://schemas.android.com/apk/res/android">
+        	<ScrollView 
+        	    android:layout_width="fill_parent"
+        		android:layout_height="fill_parent">
+        	<LinearLayout
+				android:id="@+id/insidetab5"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:orientation="vertical"
+				xmlns:android="http://schemas.android.com/apk/res/android">
+				<TextView
+					android:id="@+id/help"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:textColor="#000000"
+					android:layout_marginLeft="10dip"
+					android:layout_marginRight="10dip"
+					android:text="@string/help" />
+        	</LinearLayout>
+        	</ScrollView>
         	</LinearLayout>
   		</FrameLayout>
    		<!-- End of tabs -->
