--- a/res/drawable/canvasborder.xml
+++ b/res/drawable/canvasborder.xml
@@ -2,7 +2,7 @@
     <stroke 
         android:width="1dp" 
         android:color="#000000" />
-    <solid android:color="#ffffff" />
+    <solid android:color="#00ffffff" />
     <padding android:left="1dp" 
         android:top="1dp"
         android:right="1dp" 
