--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -28,10 +28,11 @@
             	    android:background="@drawable/canvasborder"
     				android:id="@+id/pantallasimulacio"
     				android:layout_width="fill_parent"
-    				android:layout_marginTop="30dip"
+    				android:layout_marginTop="40dp"
     				android:layout_marginLeft="10dp"
 					android:layout_marginRight="10dp"
-    				android:layout_height="300dp" />
+					android:layout_height="300dp"
+    			/>
 				<LinearLayout
     				android:id="@+id/LinearLayout02"
     				android:layout_width="fill_parent"
@@ -76,7 +77,7 @@
 					android:text="@string/grow_txt1" />
 				<EditText
 					android:id="@+id/grow_edit1"
-					android:hint="@string/grow_txt1"
+					android:hint="@string/grow_txt1_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -88,7 +89,7 @@
 					android:text="@string/grow_txt2" />
 				<EditText
 					android:id="@+id/grow_edit2"
-					android:hint="@string/grow_txt2"
+					android:hint="@string/grow_txt2_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -100,7 +101,7 @@
 					android:text="@string/rain_txt1" />
 				<EditText
 					android:id="@+id/rain_edit1"
-					android:hint="@string/rain_txt1"
+					android:hint="@string/rain_txt1_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -112,7 +113,7 @@
 					android:text="@string/rain_txt2" />
 				<EditText
 					android:id="@+id/rain_edit2"
-					android:hint="@string/rain_txt2"
+					android:hint="@string/rain_txt2_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -124,7 +125,7 @@
 					android:text="@string/rain_txt3" />
 				<EditText
 					android:id="@+id/rain_edit3"
-					android:hint="@string/rain_txt3"
+					android:hint="@string/rain_txt3_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -166,7 +167,7 @@
 					android:text="@string/specie_txt1" />
 				<EditText
 					android:id="@+id/specie1_edit1"
-					android:hint="@string/specie_txt1"
+					android:hint="@string/specie_txt1_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -178,7 +179,7 @@
 					android:text="@string/specie_txt2" />
 				<EditText
 					android:id="@+id/specie1_edit2"
-					android:hint="@string/specie_txt2"
+					android:hint="@string/specie_txt2_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -190,7 +191,7 @@
 					android:text="@string/specie_txt3" />
 				<EditText
 					android:id="@+id/specie1_edit3"
-					android:hint="@string/specie_txt3"
+					android:hint="@string/specie_txt3_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -202,7 +203,7 @@
 					android:text="@string/specie_txt4" />
 				<EditText
 					android:id="@+id/specie1_edit4"
-					android:hint="@string/specie_txt4"
+					android:hint="@string/specie_txt4_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -214,7 +215,7 @@
 					android:text="@string/specie_txt5" />
 				<EditText
 					android:id="@+id/specie1_edit5"
-					android:hint="@string/specie_txt5"
+					android:hint="@string/specie_txt5_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -255,7 +256,7 @@
 					android:text="@string/specie_txt1" />
 				<EditText
 					android:id="@+id/specie2_edit1"
-					android:hint="@string/specie_txt1"
+					android:hint="@string/specie_txt1_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -267,7 +268,7 @@
 					android:text="@string/specie_txt2" />
 				<EditText
 					android:id="@+id/specie2_edit2"
-					android:hint="@string/specie_txt2"
+					android:hint="@string/specie_txt2_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -279,7 +280,7 @@
 					android:text="@string/specie_txt3" />
 				<EditText
 					android:id="@+id/specie2_edit3"
-					android:hint="@string/specie_txt3"
+					android:hint="@string/specie_txt3_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -291,7 +292,7 @@
 					android:text="@string/specie_txt4" />
 				<EditText
 					android:id="@+id/specie2_edit4"
-					android:hint="@string/specie_txt4"
+					android:hint="@string/specie_txt4_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
@@ -303,7 +304,7 @@
 					android:text="@string/specie_txt5" />
 				<EditText
 					android:id="@+id/specie2_edit5"
-					android:hint="@string/specie_txt5"
+					android:hint="@string/specie_txt5_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
