start here image. Working on it.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -22,7 +22,7 @@
     			android:id="@+id/tab1"
     			android:layout_width="fill_parent"
     			android:layout_height="fill_parent"
-    			android:background="@drawable/background"
+    			android:background="@drawable/backgroundsim"
     			android:orientation="vertical" >
             	<LinearLayout
     				android:id="@+id/pantallasimulacio"
