--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,16 +8,21 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
+      	<HorizontalScrollView android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+            android:fillViewport="true"
+            android:scrollbars="none">
       	<TabWidget 
-      	    android:layout_width="match_parent"
+      	    android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:id="@android:id/tabs" />
+      	</HorizontalScrollView>
       	<!-- Begining of tabs -->
       	<FrameLayout 
       	    android:layout_width="match_parent"
            	android:layout_height="match_parent"
        		android:id="@android:id/tabcontent" >
-       		<!-- First tab -->
+       		<!-- Sim tab -->
             <RelativeLayout
     			android:id="@+id/tab1"
     			android:layout_width="fill_parent"
@@ -48,7 +53,38 @@
 						android:text="" />		
 				</LinearLayout>
 			</RelativeLayout>
-            <!-- Second tab -->
+			<!-- Graph tab -->
+            <RelativeLayout
+    			android:id="@+id/tab6"
+    			android:layout_width="fill_parent"
+    			android:layout_height="fill_parent"
+    			android:background="@drawable/backgroundsim"
+    			android:orientation="vertical" >
+            	<LinearLayout
+    				android:id="@+id/graficsimulacio"
+    				android:layout_width="fill_parent"
+    				android:layout_marginTop="10dp"
+    				android:layout_marginLeft="10dp"
+					android:layout_marginRight="10dp"
+					android:layout_height="300dp"
+    			/>
+				<LinearLayout
+    				android:id="@+id/LinearLayout03"
+    				android:layout_width="fill_parent"
+    				android:layout_height="wrap_content"
+    				android:layout_below="@+id/graficsimulacio">
+    				<TextView
+						android:id="@+id/show_infograph"
+						android:layout_width="fill_parent"
+						android:layout_height="wrap_content"
+						android:textColor="#000000"
+						android:layout_marginLeft="10dp"
+						android:layout_marginTop="5dp"
+						android:gravity="left"
+						android:text="" />		
+				</LinearLayout>
+			</RelativeLayout>
+            <!-- Plants tab -->
             <!-- inicia el ScrollView -->
    			<LinearLayout
 				android:id="@+id/tab2"
@@ -137,7 +173,7 @@
         	</LinearLayout>
         	</ScrollView>
         	</LinearLayout>
-        	<!-- Third tab -->
+        	<!-- Specie 1 tab -->
           	<!-- inicia el ScrollView -->
           	<LinearLayout
 				android:id="@+id/tab3"
@@ -251,7 +287,7 @@
         	</LinearLayout>
         	</ScrollView>
         	</LinearLayout>
-        	<!-- Fourth tab -->
+        	<!-- Specie 2 tab -->
         	<!-- inicia el ScrollView -->
         	<LinearLayout
 				android:id="@+id/tab4"
@@ -364,7 +400,7 @@
         	</LinearLayout>
         	</ScrollView>
         	</LinearLayout>
-        	<!-- Fifth tab -->
+        	<!-- Help tab -->
         	<!-- inicia el ScrollView -->
         	<LinearLayout
 				android:id="@+id/tab5"
