--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,10 +8,15 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" >
-      	<TabWidget 
-      	    android:layout_width="match_parent"
+      	<HorizontalScrollView android:layout_width="fill_parent"
         	android:layout_height="wrap_content"
-        	android:id="@android:id/tabs" />
+            android:fillViewport="true"
+            android:scrollbars="none">
+      		<TabWidget 
+      	   		android:layout_width="wrap_content"
+        		android:layout_height="wrap_content"
+        		android:id="@android:id/tabs" />
+      	</HorizontalScrollView>
       	<!-- Begining of tabs -->
       	<FrameLayout 
       	    android:layout_width="match_parent"
