--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -12,7 +12,7 @@
         	android:layout_height="wrap_content"
             android:fillViewport="true"
             android:scrollbars="none">
-      	<TabWidget 
+      		<TabWidget 
       	    android:layout_width="wrap_content"
         	android:layout_height="wrap_content"
         	android:id="@android:id/tabs" />
@@ -278,6 +278,18 @@
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
+				<TextView
+					android:id="@+id/specie1_txt8"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:textColor="#000000"
+					android:text="@string/specie_txt8" />
+				<EditText
+					android:id="@+id/specie1_edit8"
+					android:hint="@string/specie_txt8_hint"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
 				<Button
 					android:id="@+id/specie1_update"
 					android:layout_width="wrap_content"
@@ -388,6 +400,18 @@
 				<EditText
 					android:id="@+id/specie2_edit5"
 					android:hint="@string/specie_txt5_hint"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					/>
+				<TextView
+					android:id="@+id/specie2_txt8"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:textColor="#000000"
+					android:text="@string/specie_txt8" />
+				<EditText
+					android:id="@+id/specie2_edit8"
+					android:hint="@string/specie_txt8_hint"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					/>
