--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,8 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_exit"
-   		android:title="Exit" />
-    <item android:id="@+id/menu_stop"
-        android:title="Stop" />
     <item android:id="@+id/menu_start"
         android:title="Start" />
+    <item android:id="@+id/menu_stop"
+        android:title="Stop" />
+    <item android:id="@+id/menu_reset"
+        android:title="Reset" />
+    <item android:id="@+id/menu_exit"
+   		android:title="Exit" />
 </menu>
