--- a/res/menu/menu.xml
+++ b/res/menu/menu.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_start"
-        android:title="Resume" />
+        android:title="Start / Resume" />
     <item android:id="@+id/menu_stop"
         android:title="Pause" />
     <item android:id="@+id/menu_reset"
