--- a/res/layout/maintablet.xml
+++ b/res/layout/maintablet.xml
@@ -472,6 +472,8 @@
 					android:id="@+id/help"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
+					android:autoLink="web"
+					android:linksClickable="true"
 					android:textColor="#000000"
 					android:text="@string/help" />
         	</LinearLayout>
